.provarCaches/00D5f000005vwGkEAI/objects/rstk__ictrdvdmd__c.object
<CustomObject>
    <description>ictrdvdmd__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_comments__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_dimvals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>dimvals</label>
        <referenceTo>rstk__dimvals__c</referenceTo>
        <relationshipLabel>ictrdvdmds</relationshipLabel>
        <relationshipName>ictrdvdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ictrdvdmds (Division)</relationshipLabel>
        <relationshipName>ictrdvdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_dmdsts__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Demand Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_dtereqd__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_intrdivtxfracct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Inter-Div Transfer Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>ictrdvdmds</relationshipLabel>
        <relationshipName>ictrdvdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_invuom__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Inventory UOM</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>ictrdvdmds</relationshipLabel>
        <relationshipName>ictrdvdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Item No</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>ictrdvdmds</relationshipLabel>
        <relationshipName>ictrdvdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_lne__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Line No</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_ordno__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Order No</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_proj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>ictrdvdmds (Project)</relationshipLabel>
        <relationshipName>ictrdvdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_qtyalloc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Quantity Allocated</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_qtyiss__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Quantity Issued</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_qtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Quantity Outstanding</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_qtyreq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Quantity Req</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_resp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Responsible Person</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>ictrdvdmds</relationshipLabel>
        <relationshipName>ictrdvdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_schedfirmdte__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Scheduled Firm Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ictrdvdmds (Site)</relationshipLabel>
        <relationshipName>ictrdvdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_supdiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Supply Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ictrdvdmds (Supply Division)</relationshipLabel>
        <relationshipName>ictrdvdmds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_supproj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Supply Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>ictrdvdmds (Supply Project)</relationshipLabel>
        <relationshipName>ictrdvdmds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_supsite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Supply Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ictrdvdmds (Supply Site)</relationshipLabel>
        <relationshipName>ictrdvdmds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_ucstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>ictrdvdmd_ucstfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_ucstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Lab</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_ucstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Material</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_ucstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Fringe Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_ucstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Lab Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_ucstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Mach Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_ucstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Mtl Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_ucstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>ictrdvdmd_ucstothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_ucstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Sub Labor</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_ucstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Sub Mtl</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmd_wbs__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>WBS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ictrdvdmd</label>
    <nameField>
        <label>ictrdvdmd Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ictrdvdmds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Qty_Allocated_Cannot_be_less_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__ictrdvdmd_qtyalloc__c &lt; 0</errorConditionFormula>
        <errorMessage>Qty Allocated Cannot be less than 0</errorMessage>
    </validationRules>
</CustomObject>